Refactor: refactor CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,32 +7,20 @@ include_directories(src/api src/utils)
 
 include(FetchContent)
 
-FetchContent_Declare(
-        cpr
-        GIT_REPOSITORY https://github.com/libcpr/cpr.git
-        GIT_TAG 3b15fa82ea74739b574d705fea44959b58142eb8
-        GIT_SHALLOW TRUE
-        GIT_PROGRESS TRUE
-)
-FetchContent_MakeAvailable(cpr)
+function(fetch_dependency name git_url git_tag)
+    FetchContent_Declare(
+            ${name}
+            GIT_REPOSITORY ${git_url}
+            GIT_TAG ${git_tag}
+            GIT_SHALLOW TRUE
+            GIT_PROGRESS TRUE
+    )
+    FetchContent_MakeAvailable(${name})
+endfunction()
 
-FetchContent_Declare(
-        jsoncpp
-        GIT_REPOSITORY https://github.com/open-source-parsers/jsoncpp
-        GIT_TAG 1.9.5
-        GIT_SHALLOW TRUE
-        GIT_PROGRESS TRUE
-)
-FetchContent_MakeAvailable(jsoncpp)
-
-FetchContent_Declare(
-        cli
-        GIT_REPOSITORY https://github.com/daniele77/cli.git
-        GIT_TAG master
-        GIT_SHALLOW TRUE
-        GIT_PROGRESS TRUE
-)
-FetchContent_MakeAvailable(cli)
+fetch_dependency(cpr https://github.com/libcpr/cpr.git 3b15fa82ea74739b574d705fea44959b58142eb8)
+fetch_dependency(jsoncpp https://github.com/open-source-parsers/jsoncpp 1.9.5)
+fetch_dependency(cli https://github.com/daniele77/cli.git master)
 
 add_executable(PixelSkies src/main.cpp src/api/bluesky.cpp src/utils/utils.h)
 target_link_libraries(PixelSkies PRIVATE cpr::cpr jsoncpp_lib cli)
