Build: setup QT6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,18 @@ fetch_dependency(cpr https://github.com/libcpr/cpr.git 3b15fa82ea74739b574d705fe
 fetch_dependency(jsoncpp https://github.com/open-source-parsers/jsoncpp 1.9.5)
 fetch_dependency(cli https://github.com/daniele77/cli.git master)
 
-add_executable(PixelSkies src/main.cpp src/api/bluesky.cpp src/utils/utils.h)
-target_link_libraries(PixelSkies PRIVATE cpr::cpr jsoncpp_lib cli)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
+find_package(Qt6 COMPONENTS REQUIRED Quick)
+
+add_executable(PixelSkies-CLI main-cli.cpp src/api/bluesky.cpp)
+add_executable(PixelSkies-GUI main-gui.cpp src/api/bluesky.cpp)
+qt_add_qml_module(PixelSkies-GUI
+        URI PixelSkies
+        VERSION 1.0
+        QML_FILES MainWindow.qml
+)
+target_link_libraries(PixelSkies-CLI PRIVATE cpr::cpr jsoncpp_lib cli)
+target_link_libraries(PixelSkies-GUI PRIVATE cpr::cpr jsoncpp_lib cli)
+target_link_libraries(PixelSkies-GUI PRIVATE Qt6::Quick)
