UI: add BlueskyButton component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ add_executable(PixelSkies-GUI main-gui.cpp src/api/bluesky.cpp)
 qt_add_qml_module(PixelSkies-GUI
         URI PixelSkies
         VERSION 1.0
-        QML_FILES MainWindow.qml ui/BlueskyTextInput.qml
+        QML_FILES MainWindow.qml ui/BlueskyTextInput.qml ui/BlueskyButton.qml
 )
 target_link_libraries(PixelSkies-CLI PRIVATE cpr::cpr jsoncpp_lib cli)
 target_link_libraries(PixelSkies-GUI PRIVATE cpr::cpr jsoncpp_lib cli)
